RESOLVED FIXED102205
Fix [-Wmissing-braces] warnings in graphics/cpu/arm/GraphicsContext3DNEON.h
https://bugs.webkit.org/show_bug.cgi?id=102205
Summary Fix [-Wmissing-braces] warnings in graphics/cpu/arm/GraphicsContext3DNEON.h
Csaba Osztrogonác
Reported 2012-11-14 02:49:41 PST
/home/oszi/WebKit/Source/WebCore/platform/graphics/cpu/arm/GraphicsContext3DNEON.h:149:85: warning: missing braces around initializer for 'uint8x8_t [4] {aka __vector(8) __builtin_neon_uqi [4]}' [-Wmissing-braces] /home/oszi/WebKit/Source/WebCore/platform/graphics/cpu/arm/GraphicsContext3DNEON.h:53:85: warning: missing braces around initializer for 'uint8x8_t [4] {aka __vector(8) __builtin_neon_uqi [4]}' [-Wmissing-braces] /home/oszi/WebKit/Source/WebCore/platform/graphics/cpu/arm/GraphicsContext3DNEON.h:99:85: warning: missing braces around initializer for 'uint8x8_t [4] {aka __vector(8) __builtin_neon_uqi [4]}' [-Wmissing-braces]
Attachments
proposed fix (2.68 KB, patch)
2012-11-14 07:34 PST, Gabor Rapcsanyi
no flags
Gabor Rapcsanyi
Comment 1 2012-11-14 07:34:31 PST
Created attachment 174156 [details] proposed fix
Csaba Osztrogonác
Comment 2 2012-11-14 07:36:03 PST
Comment on attachment 174156 [details] proposed fix r=me.
WebKit Review Bot
Comment 3 2012-11-14 08:03:15 PST
Comment on attachment 174156 [details] proposed fix Clearing flags on attachment: 174156 Committed r134611: <http://trac.webkit.org/changeset/134611>
WebKit Review Bot
Comment 4 2012-11-14 08:03:21 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.