Fix [-Wmissing-braces] warnings in graphics/cpu/arm/GraphicsContext3DNEON.h https://bugs.webkit.org/show_bug.cgi?id=102205

Reviewed by Csaba Osztrogonác.

Fixing some warnings in GraphicsContext3DNEON.h which have been caused by missing braces.

* platform/graphics/cpu/arm/GraphicsContext3DNEON.h:
(WebCore::ARM::unpackOneRowOfRGBA4444ToRGBA8NEON):
(WebCore::ARM::unpackOneRowOfRGBA5551ToRGBA8NEON):
(WebCore::ARM::unpackOneRowOfRGB565ToRGBA8NEON):


Canonical link: https://commits.webkit.org/120336@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134611 268f45cc-cd09-0410-ab3c-d52691b4dbfc